--- a/NamesToFaces/Info.plist
+++ b/NamesToFaces/Info.plist
@@ -43,5 +43,7 @@
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need to import photos of people</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera to take pictures of people</string>
 </dict>
 </plist>
